# fira_msl

./: .gitignore  README.md
FIRA_robot/: CMakeLists.txt  package.xml
FIRA_robot/FIRA_ui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  qClient.cpp  qClient.hpp
FIRA_robot/FIRA_ui/resources/: images.qrc
FIRA_robot/FIRA_ui/ui/: main_window.ui
FIRA_robot/common/: CMakeLists.txt  qnode.hpp
FIRA_robot/srv/: test_srv.srv
challenge_avoidence/: CMakeLists.txt  package.xml
challenge_localization/: CMakeLists.txt  package.xml
fira_msl_msgs/: CMakeLists.txt  package.xml
fira_msl_msgs/action/: GoToPose.action  MovingByPose.action  MovingByPoseWithRef.action
fira_msl_msgs/msg/: WorldModel.msg
fira_msl_teleop/: CMakeLists.txt  package.xml
fira_msl_teleop/scripts/: fira_msl_teleop_key.py
fira_msl_teleop/src/: fira_msl_teleop_joy.cpp
localization/: CMakeLists.txt  add_open_cv_method  package.xml  rviz_laser_method
localization/include/: image_class.cpp  image_class.hpp  particle_filter.cpp  particle_filter.hpp  qClient.cpp  qClient.hpp
localization/src/: CMakeLists.txt  ParticleFilter_node.cpp  main.cpp
localization/srv/: encoder.srv
localization_ui/: CMakeLists.txt  package.xml
localization_ui/common/: CMakeLists.txt  qnode.hpp
localization_ui/qadd_client/: CMakeLists.txt  client_window.cpp  client_window.hpp  main.cpp  qadd.cpp  qadd.hpp
localization_ui/qadd_server/: CMakeLists.txt  main.cpp  qadd.cpp  qadd.hpp  server_window.cpp  server_window.hpp
localization_ui/srv/: Envpoint.srv
localization_ui/ui/: qclinet_window.ui  qserver_window.ui
motion/: CMakeLists.txt  MotorControl.h  motion.cpp  package.xml
motion/include/motion/: LinuxNetwork.h
motion/src/: motion_node.cpp
motion/src/motion/: LinuxNetwork.cpp
particle_filter/: CMakeLists.txt  package.xml
particle_filter/include/: CMakeLists.txt  image_class.cpp  particle_filter.cpp  particle_filter.hpp  qClient.cpp  qClient.hpp
particle_filter/src/: CMakeLists.txt  ParticleFilter_node.cpp  ParticleFilter_node.hpp
path_planning/: CMakeLists.txt  package.xml
path_planning/launch/: path_planning.launch
path_planning/scripts/: move_in_line.py  move_with_ref.py  speed_control.py
path_planning/test/: test_move_in_line.py  test_move_with_ref.py
qtcreator-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  localization.cbp
qtcreator-build/catkin_generated/: generate_cached_setup.py  localization-msg-extras.cmake.develspace.in  localization-msg-extras.cmake.installspace.in  localization-msg-paths-context.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
qtcreator-build/catkin_generated/installspace/: localization-msg-paths-context.py  localization-msg-paths.cmake  localization.pc  localizationConfig.cmake
qtcreator-build/catkin_generated/stamps/localization/: package.xml.stamp
qtcreator-build/cmake/: localization-genmsg-context.py  localization-genmsg.cmake
qtcreator-build/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
qtcreator-build/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
qtcreator-build/devel/lib/pkgconfig/: localization.pc
qtcreator-build/devel/share/localization/cmake/: localization-msg-paths.cmake  localizationConfig.cmake
qtcreator-build/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
qtcreator-build/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
qtcreator-build/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
rcs_wrapper/: CMakeLists.txt  package.xml
rcs_wrapper/include/rcs_wrapper/: sample_player.h
rcs_wrapper/src/: rcs_wrapper_node.cpp
rcs_wrapper/src/rcs_wrapper/: sample_player.cpp
strategy/: CMakeLists.txt  package.xml  role_goalie.xml
strategy/action/: GameState.action  Role.action
strategy/include/fsm/: fsm_goal_keeper.h  fsm_team_strategy.h
strategy/include/role_plugins/: role_base.h  role_defensive.h  role_goalie.h  role_offensive.h
strategy/include/roles/: role_goalie.h  role_offensive.h
strategy/launch/: fira_msl_strategy.launch
strategy/scripts/: bhv_chase_ball.py  bhv_dash.py  bhv_search_ball.py  game_state.py  role_goal_keeper.py  role_offensive.py  role_selector.py  strategy.py  strategy_main.py
strategy/scripts/behaviours/: bhv_block_enemy.py  bhv_chase_ball.py  bhv_dash.py  bhv_gk_chase_ball.py  bhv_gk_search_ball.py  bhv_search_ball.py
strategy/scripts/roles/: role_defensive.py  role_goal_keeper.py  role_offensive.py  role_selector.py
strategy/src/: behaviors.cpp  behaviours.cpp  roles.cpp  team_strategy.cpp
strategy/src/fsm/: fsm_goal_keeper.cpp  fsm_team_strategy.cpp
strategy/src/role_plugins/: role_goalie.cpp
strategy/src/roles/: role_defensive.cpp  role_goalie.cpp  role_offensive.cpp
vision/: CMakeLists.txt
vision/Interface/: CMakeLists.txt  interface_window.cpp  interface_window.hpp  main.cpp  qInterface.cpp  qInterface.hpp
vision/blackItem/: image_converter.cpp  image_converter.hpp
vision/common/: CMakeLists.txt
vision/msg/: Info.msg
vision/objectdetection/: image_converter.cpp  image_converter.hpp
vision/prosilica_show/: CMakeLists.txt  image_converter.cpp  image_converter.hpp  prosilica_show.cpp
vision/srv/: MSN.srv
vision/ui/: interface_window.ui  interface_window.ui.autosave
vision/whiteLine/: image_converter.cpp  image_converter.hpp
world_model/: CMakeLists.txt  package.xml
world_model/launch/: tf_broadcasters.launch
world_model/tf/: ball_tf2_broadcaster.py  ball_tf_broadcaster.py  object_tf2_broadcaster.py  robot_tf2_broadcaster.py  robot_tf_broadcaster.py
